2001-07-24  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* autogen.sh: Improved ordering; stop on error; use "aclocal -I m4".

	* acinclude.m4: Remove.

	* m4/smr_OPTIONAL_LIB.m4:
	* m4/smr_REQUIRED_LIB.m4:
	* m4/smr_WITH_BUILD_PATH.m4: New files.  These replace the old
	smr_CHECK_LIB macro in acinclude.m4.

	* Makefile.am (EXTRA_DIST): Distribute new m4 files.

	* configure.in: Use new macros.

2001-07-20  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	Tagged as release-1_3_6.

2001-07-09  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* acinclude.m4 (AC_HELP_STRING): Disable the too-clever
	pretty formatter.

2001-07-04  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Volumes/scan_polygons.c (scan_a_polygon): Add extra parameter
	specifying size of output_vertices array.

	* Include/bicpl/geom_prototypes.h: 
	* Geometry/clip_3d.c (clip_polygon_against_box): Add extra
	parameter specifying size of output_points array.  Abort if
	too many points generated.

2001-06-13  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Include/bicpl/object_prototypes.h:
	* Objects/quadmesh.c (get_quadmesh_point): 
	(get_quadmesh_n_objects): 
	(get_quadmesh_patch_indices): 
	(get_quadmesh_patch): Declare quadmesh_struct* as const.

2001-06-06  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Objects/quadmesh.c (set_quadmesh_point): Assert that
	(i,j) is a valid location.

	* Documentation/groups.dox: New.  Define groups for
	Doxygen documentation here.

	* Documentation/doxygen.config.in: Set QUIET = YES.

	* Objects/quadmesh.c: 
	* Include/bicpl/obj_defs.h: Add doxygen comment blocks for
	quadmesh structure and functions.

2001-06-05  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/bicobj2oogl.c: Allow optional second argument to specify
	output file name.

2001-04-21  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Volumes/render_funcs_include.c: 
	* Volumes/call_rend_f_include.c: Replace all occurances of "long"